--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="project-box">
                     <img src="images/image7.jpg">
                     <div class="project-desc">
-                        <a href="#">
+                        <a href="https://saralampudi.github.io/html/" target="-blank">
                             <button class="btn project-desc-btn">Html and css</button>
                         </a>
                     </div>
