--- a/index.html
+++ b/index.html
@@ -269,7 +269,14 @@
                     </div>
                 </div>
 
-                
+                <div class="project-box">
+                    <img src="images/logo1.png">
+                    <div class="project-desc">
+                        <a href="images/logo1.png" target="_blank">
+                            <button class="btn project-desc-btn">Poster</button>
+                        </a>
+                    </div>
+                </div>
 
 
             </div>
