--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!--ABOUT SECTION DESIGN-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/3d-cute-cartoon-girl-studying-education-illustration_988987-3608.avif" alt="">
+            <img src="images/image22.jpg" alt="">
         </div>
         
         <div class="about-content">
